# pdf2md-ai-skill

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/quality/: checks.sh  smoke.sh
scripts/quality/internal/: lib.sh
skill/pdf2md-ai/: SKILL.md
skill/pdf2md-ai/scripts/: install.sh
src/pdf2md_ai/: __init__.py  cli.py  converter.py  pages.py
