[project]
name = "pdf2md-ai"
version = "0.1.0"
description = "Convert PDF pages to Markdown with OpenAI vision OCR via MarkItDown"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel Illescas Romero" }]
dependencies = [
    "markitdown>=0.1.6",
    "markitdown-ocr>=0.1.0",
    "openai>=1.0.0",
    "pypdf>=5.0.0",
    "rich>=13.0.0",
    "pdfplumber>=0.11.9",
]

[project.scripts]
pdf2md-ai = "pdf2md_ai.cli:main"

[project.optional-dependencies]
dev = [
	"basedpyright>=1.29",
	"ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/pdf2md_ai"]

[tool.hatch.build.targets.wheel.sources]
"src/pdf2md_ai" = "pdf2md_ai"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["F", "I", "E", "S", "B"]
fixable = ["ALL"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["S603", "S607"]

[tool.basedpyright]
typeCheckingMode = "strict"
include = ["src"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportAttributeAccessIssue = false
executionEnvironments = [{ root = "src" }]
